# context-wizard

./: .gitignore  README.md  pyproject.toml
examples/codex/: setup.toml
examples/codex/assets/: requirements.md
examples/codex/prompts/: task.md
examples/demo/: setup.toml  vars.json
examples/demo/assets/: guidelines.md
examples/demo/prompts/: review.md
examples/demo/surveys/: review.json
examples/moodle/: README.md  moodle.sites.example.json  setup.toml  tools.env.example
examples/moodle/plugins/: moodle.py
examples/moodle/prompts/: review.md
src/context_wizard/: __init__.py  __main__.py  app.py  cli.py  ui.py
src/context_wizard/builtins/: __init__.py  _workspace.py  codex_target.py  folder_target.py
src/context_wizard/cache/: __init__.py  cache.py
src/context_wizard/config/: __init__.py  loader.py  model.py  vars.py
src/context_wizard/output/: __init__.py  dto.py  writer.py
src/context_wizard/plugins/: __init__.py  base.py  discovery.py  errors.py  registry.py  staging.py
src/context_wizard/state/: __init__.py  artifacts.py  store.py
src/context_wizard/surveys/: __init__.py  errors.py  loader.py  model.py  runner.py  schema.py  validators.py
src/context_wizard/templating/: __init__.py  errors.py  expander.py  mime.py  parser.py  renderer.py
tests/: test_cli_integration.py  test_codex_plugin.py  test_config.py  test_e2e.py  test_folder_plugin.py  test_moodle_plugin.py  test_output_cache.py  test_plugin_push_screen.py  test_plugin_stages.py  test_plugins.py  test_store.py  test_surveys.py  test_templating.py  test_tui.py
(+3 files in other folders)
